# Weird-PS

./: Cargo.toml
src/: main.rs
