[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4"
log = "0.4"
ctrlc = "3.1"
sysinfo = { version = "0.31.4", features = ["windows"] }
dirs = "5.0.1"

